tests/invalid/trait/assoc_projection_trait_own_bound_arg_mismatch.facet
trait Provider {
  type Item;
}

impl Provider for unrestricted isize {
  type Item = unrestricted bool;
}

trait Marker<T>;

impl Marker<unrestricted isize> for unrestricted isize;

trait Convert<T> where T: Marker<unrestricted <unrestricted isize as Provider>::Item>;

impl Convert<unrestricted isize> for unrestricted isize;

fn main() -> unrestricted isize {
  1
}
